--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
     <li>STRENGTHS</li>
     <li>FEEDBACK</li>
     <li>ENGAGEMENT</li>
-    <li>AUTHENTICITY</li>
-    <li>SELFAWARENESS</li>
     <li>CUSTOMER</li>
     <li>POSITIVE</li>
     <li>REPAIR</li>
@@ -53,7 +51,6 @@
     <li>DOWNTIME</li>
     <li>BOUNDARIES</li>
     <li>SAFETY</li>
-    <li>ACCOUNTABILITY</li>
     <li>ENERGY</li>
   </ul>
 
@@ -78,9 +75,8 @@
     ];
     const words = [
       'WELLBEING','RESILIENCE','TRUST','REST','STRENGTHS','FEEDBACK',
-      'ENGAGEMENT','AUTHENTICITY','SELFAWARENESS','CUSTOMER','POSITIVE',
-      'REPAIR','MAINTENANCE','ANCHOR','DOWNTIME','BOUNDARIES','SAFETY',
-      'ACCOUNTABILITY','ENERGY'
+      'ENGAGEMENT','CUSTOMER','POSITIVE',
+      'REPAIR','MAINTENANCE','ANCHOR','DOWNTIME','BOUNDARIES','SAFETY','ENERGY'
     ];
     const grid = document.getElementById('grid');
     const wordList = document.getElementById('word-list');
@@ -100,37 +96,54 @@
       grid.appendChild(tr);
     });
 
-    // Handle cell click
-    grid.addEventListener('click', function(e) {
-      if (e.target.tagName === 'TD') {
-        e.target.classList.toggle('selected');
-        const x = e.target.dataset.x;
-        const y = e.target.dataset.y;
-        const index = selected.findIndex(cell => cell.x === x && cell.y === y);
-        if (index > -1) {
-          selected.splice(index, 1);
-        } else {
-          selected.push({x, y, el: e.target});
-        }
+ function isStraightLine(cells) {
+  if (cells.length < 2) return false;
 
-        // Check if selected sequence forms a valid word
-        if (selected.length > 1) {
-          const word = selected.map(cell => cell.el.textContent).join('').toUpperCase();
-          const reverse = selected.map(cell => cell.el.textContent).reverse().join('').toUpperCase();
-          const matchedWord = words.find(w => w === word || w === reverse);
+  const dx = cells[1].x - cells[0].x;
+  const dy = cells[1].y - cells[0].y;
 
-          if (matchedWord) {
-            selected.forEach(cell => {
-              cell.el.classList.add('found');
-              cell.el.classList.remove('selected');
-            });
-            highlightWordInList(matchedWord);
-          }
-          selected.forEach(cell => cell.el.classList.remove('selected'));
-          selected = [];
-        }
+  for (let i = 1; i < cells.length; i++) {
+    const expectedX = parseInt(cells[0].x) + dx * i;
+    const expectedY = parseInt(cells[0].y) + dy * i;
+    if (parseInt(cells[i].x) !== expectedX || parseInt(cells[i].y) !== expectedY) {
+      return false;
+    }
+  }
+  return true;
+}
+
+grid.addEventListener('click', function(e) {
+  if (e.target.tagName === 'TD') {
+    e.target.classList.toggle('selected');
+    const x = parseInt(e.target.dataset.x);
+    const y = parseInt(e.target.dataset.y);
+    const index = selected.findIndex(cell => cell.x === x && cell.y === y);
+    if (index > -1) {
+      selected.splice(index, 1);
+    } else {
+      selected.push({x, y, el: e.target});
+    }
+
+    if (selected.length > 1 && isStraightLine(selected)) {
+      const word = selected.map(cell => cell.el.textContent).join('').toUpperCase();
+      const reverse = selected.map(cell => cell.el.textContent).reverse().join('').toUpperCase();
+      const matchedWord = words.find(w => w === word || w === reverse);
+
+      if (matchedWord) {
+        selected.forEach(cell => {
+          cell.el.classList.add('found');
+          cell.el.classList.remove('selected');
+        });
+        highlightWordInList(matchedWord);
+        selected = [];
       }
-    });
+    } else if (selected.length > 1 && !isStraightLine(selected)) {
+      // Clear invalid selection
+      selected.forEach(cell => cell.el.classList.remove('selected'));
+      selected = [];
+    }
+  }
+});
 
    function highlightWordInList(word) {
   const items = wordList.querySelectorAll('li');
